added some further styling

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -13,5 +13,12 @@
 
   .search {
     padding-bottom: 25px;
+    
+    input {
+      width: 360px;
+      padding: 5px;
+      border-radius: 10px;
+      border: 1px solid #BBB;
+    }
   }
 }
