--- a/client/src/styles/Movie.scss
+++ b/client/src/styles/Movie.scss
@@ -1,7 +1,7 @@
 .movie {
     display: flex;
     border-radius: 25px;
-    border: 1px solid #DDD;
+    border: 1px solid #BBB;
     padding: 15px;
     width: 600px;
 
